# Smartinventory-Machine-Learning-Streamlit

./: .env.example  .gitignore  .replit  README.md  app.py  data_processing.py  database.py  ml_forecasting.py  pyproject.toml  utils.py
.streamlit/: config.toml
attached_assets/: Pasted-You-are-a-senior-full-stack-data-scientist-and-software-engineer-tasked-with-building-a-complete-pr-1758276060979_1758276060980.txt
pages/: 1_Data_Upload.py  2_Data_Exploration.py  3_Forecasting.py  4_Inventory_Management.py  5_Performance_Metrics.py
utils/: __init__.py  data_processing.py  database.py  forecasting.py  inventory_optimization.py  visualizations.py
