[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
]
